"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-08-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-68:
	  bootstrap: create and distribute headers_deps.make and 
		include it from the srcdir.  Header-check dependencies
		were not being honored before.  
	  Makefile.am: fake ../libltdl/ltdl.hchk, and clean it.


2007-08-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-67:
	  lexer/hackt-lex.ll: support binary integers 0b[01]+
	  formatted I/O additions to util/ (util/ChangeLog)


	* HACKT-00-01-04-main-00-81-66:
	  Fixes for last patch, using configure-detection workaround, 
		and fixing backup implementations of util/numeric/...
		bit manipulation functions, when built-ins are unavailable.


	* HACKT-00-01-04-main-00-81-65:
	  Util library revisions only (significant): see util/ChangeLog.
	  CHPSIM standard library added new bit-manip functions, 
		also documented, see lib/ChangeLog.  


2007-08-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-64:
	  No source revision.  
	  Make.hchk-tail: header-check script now strips srcdir from 
		dependency when compiling to force path search
		for built headers.  


2007-08-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-63-merged-chpsim-08-09:
	  Branch merge of -chpsim-08.  Summary:
	  Added nonmeta-support for string-literal values, 
		currently only exposed to nonmeta language, such as CHP.
	  Added run-time support for passing around of string values (CHP).
	  CHPSIM standard library: added IO, file-stream, string manipulation
		library functions, all tested and documented.  
	  chpsim:dlopen: no longer use ltdl_find_sym, only use restricted
		interface for registering functions.  
	  parser: consecutive string-literals are automatically concatenated